--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,8 @@
-/* 
-*{
-    background-color: rgb(46, 57, 65);
-}
-*/
-
 body{
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    background-color: rgb(46, 57, 65);
 }
 
 .header{
@@ -16,6 +11,8 @@ body{
     padding-right: 200px;
     color: white;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    height: 80vh;
+    flex: 1 1 auto;
 }
 
 #top-half{
@@ -41,12 +38,13 @@ ul{
 .header-content{
     display: flex;
     justify-content: space-between;
-
+    height: 60vh;
 }
 
 .title{
-    font-size: 40px;
+    font-size: 60px;
     font-weight: 900;
+    width: 500px;
 }
 
 .description{
@@ -58,29 +56,28 @@ ul{
     gap: 2px;
 }
 
-.title{
-    width: 300px;
-}
-
 .subtext{
-    width: 400px;
+    width: 550px;
     padding-bottom: 5px;
+    font-size: 22px;
 }
 
 #button-1{
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: rgb(53, 123, 226);
     border-color: rgb(53, 123, 226);
     color: white;
-    width: 100px;
-    height: 30px;
+    width: 150px;
+    height: 45px;
     font-weight: 600;
+    font-size: 20px;
     text-align: center;
 }
 
 img{
+    align-self: center;
     width: 100vh;
-    height: 30vh;
+    height: 40vh;
     margin-bottom: 50px;
     padding-top: 50px;
 }
@@ -92,6 +89,9 @@ img{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 200px;
+    flex: 1 1 auto;
+    width: 246vh;
 }
 
 .heading{
@@ -102,39 +102,36 @@ img{
 
 .content{
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
     align-items: center;
+    gap: 50px;
 }
 
 .pics{
-    width: 180vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
+    flex: 1;
     align-items: center;
-    gap: 50px;
-    flex-wrap: wrap;
 }
+
 
 .stock{
     border: solid 6px rgb(53, 123, 226);
     border-radius: 10px;
-    height: 30vh;
-    width: 30vh;
-    align-self: center;
-    padding: 10px;
-}
-
-
-/*
-.info{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    width: 35vh;
+    height: 35vh;
     align-items: center;
-    gap: 50px;
 }
 
 .text{
-    width: 30vh;
-    flex-wrap: wrap;
+    justify-self: center;
+    text-align: center;
+    margin: 5px;
+    width: 250px;
+    word-wrap: break-word;
 }
-*/
